[package]
name = "alfredit"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plist = "0.5.4"
serde = { version = "1.0.106", features = ["derive"] }
linked-hash-map = { version = "0.5.2", features = ["serde_impl"] }
csv = "1.1.3"
dirs = "2.0.2"
